# sq3pp

./: .gitignore  LICENSE  Makefile  Makefile.am  configure.ac
example/: Makefile.am  main.cpp
include/sq3pp/: Database.h  Exception.h  Statement.h  Transaction.h
m4/: ax_cxx_compile_stdcxx.m4
src/: Database.cpp  Makefile.am  Statement.cpp  Transaction.cpp
